# Salix

./: CMakeLists.txt  Makefile  README.md  changes.txt  main  main.sl  main.slx  output.asm  salix
inc/: AST.h  cmcode.h  lexer.h  list.h  map.h  options.h  parser.h  token.h  utils.h
include/: core.h
include/bytecode/: Slb.h  SlbExec.h
include/io/: ArgumentsParsing.h  Logger.h  fs.h
include/lexer/: Lexer.h  LexerFileParser.h  LexerToken.h
include/parser/: AST.h  Parser.h
include/utils/: Utils.h
src/: AST.c  AST_debugger.c  cmcode.c  lexer.c  list.c  main.c  main.cpp  map.c  options.c  parser.c  token.c  utils.c
src/bytecode/: Slb.cpp
src/io/: ArgumentsParsing.cpp  Logger.cpp  fs.cpp
src/lexer/: Lexer.cpp  LexerFileParser.cpp  LexerToken.cpp
src/parser/: AST.cpp  Parser.cpp
src/utils/: Utils.cpp
std/: builtins.slx  std.slx
std/datatypes/: integer.slx
tests/: Logger.cpp  Logger.h  fs.cpp  fs.h  main.cpp  test.h
